# RFE

RFE/: CMakeLists.txt  main.cpp
RFE/c++/OSM/: osm.cpp  osm.h
RFE/c++/data_management/: datamanager.cpp  datamanager.h
RFE/c++/image_proc/: imageproc.cpp  imageproc.h
RFE/c++/parallel_processing/: parallelprocessing.cpp  parallelprocessing.h
